--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^6.0.2",
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/lucide": "^1.2.43",
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/vite": "^4.1.7",
     "astro": "^5.7.13",
     "astro-icon": "^1.1.5",
+    "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^3.3.3"
   }
 }
